<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Contrainte principale -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containFinishLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Texte au-dessus -->

        <Button
            android:id="@+id/btnValidate"
            style="@style/OrisonButtonAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="onValid"
            android:text="Valider"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/TVInfVef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/Text_Nbmail"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/tailleReponse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Champ d'entrée -->
        <EditText
            android:id="@+id/editHandleUser"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@null"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="@dimen/tailleReponse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVInfVef" />

        <!-- Résultats -->
        <TextView
            android:id="@+id/TVNbPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/Text_NbPointRep"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/tailleReponse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editHandleUser" />

        <TextView
            android:id="@+id/TVNbQues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Text_NbQues"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/tailleReponse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVNbPoint" />

        <!-- Bouton -->

        <ImageView
            android:id="@+id/logoQuiz2"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:maxWidth="560dp"
            android:src="@drawable/logoblanc"
            app:layout_constraintBottom_toBottomOf="@+id/btnValidate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnValidate"
            app:layout_constraintVertical_bias="0.44" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
